--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Поддержка здесь
     </h1>
     <p class="contacts__subheading">
-      Мы любим общаться и рады всем отзывам, вопросам и предложениям. Выберите удобный способ
+      Мы любим общаться и рады всем отзывам, вопросам и&nbsp;предложениям. Выберите удобный способ
     </p>
     <ul class="contacts__items list">
       <li class="contacts__item list__item">
@@ -47,7 +47,7 @@
 
   <div class="networks">
     <div class="networks__text-wrapper">
-      <span class="networks__subheading">Социальные сети и сообщество</span>
+      <h2 class="networks__subheading">Социальные сети и&nbsp;сообщество</h2>
       <span class="networks__heading">Присоединяйтесь</span>
     </div>
     <ul class="networks__list list">
@@ -84,8 +84,8 @@
     </ul>
   </div>
 
-  <div class="slider-container">
-    <span class="slider-container__heading">Часто задаваемые вопросы</span>
+  <div class="slider-container section">
+    <h2 class="slider-container__heading section__heading">Часто задаваемые вопросы</h2>
     <div class="slider">
       <ul class="slider__list list">
         <li class="slider__item list__item">
@@ -109,7 +109,9 @@
           <p class="slider__item-heading ">Где работает доставка?</p>
         </li>
         <li class="slider__item list__item">
-          <p class="slider__item-heading ">Где работает доставка?</p>
+          <p class="slider__item-heading slider__item-heading_short">Где работает доставка?</p>
+          <p class="slider__item-subheading slider__item-subheading_short">Карта лояльности с&nbsp;вашим номером</p>
+          <img src="./images/bag.png" alt="Изображение пакета" class="slider__item-pic">
         </li>
         <li class="slider__item list__item">
           <p class="slider__item-heading ">Где работает доставка?</p>
@@ -118,14 +120,67 @@
 
 
     
-    <button class="slider__btn slider__btn_next">
-      <img src="./images/arrow-btn.png" alt="" class="slider__btn-arrow slider__btn-arrow_next">
-    </button>
+      <button class="slider__btn slider__btn_next" id="btn-next">
+        <img src="./images/arrow-btn.png" alt="" class="slider__btn-arrow slider__btn-arrow_next">
+      </button>
 
-    <button class="slider__btn slider__btn_prev">
-      <img src="./images/arrow-btn.png" alt="" class="slider__btn-arrow slider__btn-arrow_prev">
-    </button>
+      <button class="slider__btn slider__btn_prev" id="btn-prev">
+        <img src="./images/arrow-btn.png" alt="" class="slider__btn-arrow slider__btn-arrow_prev">
+      </button>
     </div>
+
+  </div>
+
+  <div class="faq section">
+    <h2 class="faq__heading section__heading">Справка</h2>
+    <div class="faq__wrapper">
+      <div class="faq__box">
+        <div class="faq__question">
+          <h3 class="faq__question-heading">
+            Бережная сборка
+          </h3>
+          <img src="./images/faq-arrow.png" alt="" class="faq__arrow">
+        </div>
+        <div class="faq__answer">
+          <span class="faq__answer-text">Это карта лояльности с вашим номером покупат Это карта лояльности с вашим номером покупат</span>
+        </div>
+      </div>
+
+      <div class="faq__box">
+        <div class="faq__question">
+          <h3 class="faq__question-heading">
+            Способы доставки и&nbsp;самовывоза
+          </h3>
+          <img src="./images/faq-arrow.png" alt="" class="faq__arrow">
+        </div>
+        <div class="faq__answer">
+          <span class="faq__answer-text">Это карта лояльности с вашим номером покупат Это карта лояльности с вашим номером покупат</span>
+        </div>
+      </div>
+
+      <div class="faq__box">
+        <div class="faq__question">
+          <h3 class="faq__question-heading">
+            Минимальная сумма заказа
+          </h3>
+          <img src="./images/faq-arrow.png" alt="" class="faq__arrow">
+        </div>
+        <div class="faq__answer">
+          <span class="faq__answer-text">Это карта лояльности с вашим номером покупат Это карта лояльности с вашим номером покупат</span>
+        </div>
+      </div>
+      <div class="faq__box">
+        <div class="faq__question">
+          <h3 class="faq__question-heading">
+            Лёгкий возврат
+          </h3>
+          <img src="./images/faq-arrow.png" alt="" class="faq__arrow">
+        </div>
+        <div class="faq__answer">
+          <span class="faq__answer-text">Это карта лояльности с вашим номером покупат Это карта лояльности с вашим номером покупат</span>
+        </div>
+      </div>
+    </div>   
 
   </div>
   
